app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-private
    nginx.ingress.kubernetes.io/app-root: /namespaces
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: myapp
  namespace: flux-app-example
spec:
  rules:
    - host: myapp${cluster_ingress_dns}
      http:
        paths:
          - backend:
              service:
                name: myapp
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
